--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <span class="nowrap">free<sup class="relative top-0">*</sup>,</span> available on phones all over the world.
         </p>
     </div>
-    <div class="flex justify-center items-center mb-[2.5rem] md:hidden">
-        <button class="text-white bg-[#075e54] py-[13.5px] px-8 rounded-[40px] w-[80%]">DOWNLOAD NOW</button>
+    <div class="flex justify-center mb-[2.75rem] md:hidden">
+        <img class="_9v96 max-w-[80%]" src="https://static.whatsapp.net/rsrc.php/yb/r/9Ec-ioyud_s.svg">
     </div>
     <div class="h-[24.4rem] overflow-hidden md:hidden">
         <div class="flex justify-center">
